@@ -280,7 +280,11 @@ of a simple name.  Called before EXPR has a parent node."
           (regexp-opt
            '("enum"
              "extends"
+             "field"
+             "id"
              "implements"
+             "lends"
+             "mods"
              "requires"
              "return"
              "returns"
@@ -292,11 +296,24 @@ of a simple name.  Called before EXPR has a parent node."
 (defconst js2-jsdoc-arg-tag-regexp
   (concat "^\\s-*\\*+\\s-*\\(@\\(?:"
           (regexp-opt
-           '("bug"
+           '("alias"
+             "augments"
+             "borrows"
+             "bug"
              "base"
+             "config"
+             "default"
+             "define"
              "exception"
+             "function"
              "member"
+             "memberOf"
              "name"
+             "namespace"
+             "property"
+             "since"
+             "suppress"
+             "this"
              "throws"
              "type"
              "version"))
@@ -307,38 +324,48 @@ of a simple name.  Called before EXPR has a parent node."
   (concat "^\\s-*\\*+\\s-*\\(@\\(?:"
           (regexp-opt
            '("addon"
+             "author"
              "class"
              "const"
+             "constant"
              "constructor"
+             "constructs"
              "deprecated"
              "desc"
+             "description"
              "event"
+             "example"
              "exec"
              "export"
              "fileoverview"
              "final"
+             "function"
              "hidden"
              "ignore"
+             "implicitCast"
              "inheritDoc"
+             "inner"
              "interface"
              "license"
              "noalias"
              "noshadow"
              "notypecheck"
              "override"
+             "owner"
              "preserve"
              "preserveTry"
              "private"
              "protected"
              "public"
              "static"
+             "supported"
              ))
           "\\)\\)\\s-*")
   "Matches empty jsdoc tags.")
   
 (defconst js2-jsdoc-link-tag-regexp
-  "{\\(@link\\)\\s-+\\([^#}\n]+\\)\\(#.+\\)?}"
-  "Matches a jsdoc link tag.")
+  "{\\(@\\(?:link\\|code\\)\\)\\s-+\\([^#}\n]+\\)\\(#.+\\)?}"
+  "Matches a jsdoc link or code tag.")
 
 (defconst js2-jsdoc-see-tag-regexp
   "^\\s-*\\*+\\s-*\\(@see\\)\\s-+\\([^#}\n]+\\)\\(#.+\\)?"
